[gd_scene load_steps=6 format=3 uid="uid://bqb2icn1bvv7m"]

[ext_resource type="Shader" uid="uid://niw6ynp57ppk" path="res://assets/shaders/zone_action_button.gdshader" id="1_ot0m7"]
[ext_resource type="Texture2D" uid="uid://b1p3cusk4fkfo" path="res://assets/ui_images/action_buttons/action_button_1.png" id="2_8op3i"]
[ext_resource type="Script" uid="uid://blqqm2h0f5aai" path="res://scenes/ui/inkbrush_button/inkbrush_button.gd" id="3_yuh8y"]
[ext_resource type="Texture2D" uid="uid://ccmwdbboutd2m" path="res://32.png" id="4_v25pg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lyyb7"]
resource_local_to_scene = true
shader = ExtResource("1_ot0m7")
shader_parameter/fill_amount = 0.3

[node name="InkbrushButton" type="TextureButton"]
material = SubResource("ShaderMaterial_lyyb7")
mouse_filter = 1
texture_normal = ExtResource("2_8op3i")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_yuh8y")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="IconTexture" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("4_v25pg")
stretch_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Action Name"
horizontal_alignment = 1
vertical_alignment = 1
